Adjusted spacing on menu items and make order panel fixed width

--- a/client/src/components/Order/Order.module.css
+++ b/client/src/components/Order/Order.module.css
@@ -1,5 +1,6 @@
 .order_panel {
-  width: 25%;
+  /* width: 25%; */
+  width: 450px;
   position: fixed;
   right: 0;
   top: 0;
